--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -1,3 +1,8 @@
+html {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
     /*background: url(background-photo.jpg) center center cover no-repeat fixed;*/
     background-image: url("../images/Fondo2.png");
@@ -9,9 +14,25 @@ body {
 
 }
 
+.containerprofile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
 .navbar {
     background-color: #a8a8a8;
     opacity: .5;
+    font-style: bold;
+    font-family: 'Poppins';
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: #a8a8a87c;
+    /* Cambia el color de fondo */
+    padding: 2px;
+
 }
 
 
@@ -110,4 +131,58 @@ body {
         top: 15px;
         right: 35px;
     }
+}
+
+
+
+
+
+/* Estilo para el footer */
+footer {
+    background-color: #a8a8a8;
+    color: white;
+    padding: 10px;
+}
+
+/* Contenedor principal del footer */
+.footer-container {
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+/* Estilo para el logo en el footer */
+.footerlogo {
+    width: 100px;
+    margin: 0 auto;
+    /* Centrar horizontalmente */
+}
+
+/* Estilo para las divisiones entre el logo y los íconos */
+.divider {
+    margin-top: 10px;
+    width: 100%;
+    height: 5px;
+    background-color: rgb(0, 0, 0);
+}
+
+/* Estilo para los íconos de redes sociales */
+.social-icons {
+    margin-top: 20px;
+}
+
+
+/* Estilo para las imágenes de íconos de redes sociales */
+.social-icon img {
+    width: 30px;
+    height: 30px;
+}
+
+.links a {
+    text-decoration: none;
+    color: black;
+    font-size: medium;
+    font-weight: bold;
+
 }
