--- a/pages/sobreNosotros/assets/styles.css
+++ b/pages/sobreNosotros/assets/styles.css
@@ -116,14 +116,14 @@ h3{
 
 /* Estilo para el footer */
 footer {
-    background-color: #a8a8a87c;
+    background-color: #a8a8a8;
     color: white;
-    padding: 10px ;
+    padding: 10px;
 }
 
 /* Contenedor principal del footer */
 .footer-container {
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -132,13 +132,14 @@ footer {
 /* Estilo para el logo en el footer */
 .footerlogo {
     width: 100px;
-    margin: 0 auto; /* Centrar horizontalmente */
+    margin: 0 auto;
+    /* Centrar horizontalmente */
 }
 
 /* Estilo para las divisiones entre el logo y los íconos */
 .divider {
     margin-top: 10px;
-    width: 50%;
+    width: 100%;
     height: 5px;
     background-color: rgb(0, 0, 0);
 }
@@ -155,3 +156,10 @@ footer {
     height: 30px;
 }
 
+.links a {
+    text-decoration: none;
+    color: black;
+    font-size: medium;
+    font-weight: bold;
+
+}
