--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -14,6 +14,7 @@ body {
 
 }
 
+
 .containerprofile img {
     width: 50px;
     height: 50px;
@@ -22,8 +23,6 @@ body {
 }
 
 .navbar {
-    background-color: #a8a8a8;
-    opacity: .5;
     font-style: bold;
     font-family: 'Poppins';
     position: sticky;
@@ -36,103 +35,29 @@ body {
 }
 
 
-.navbar-toggle {
-    float: right !important;
-    margin-left: 15px;
-    margin-right: 20px;
-}
-
-.modal-nav-content {
-    width: 30%;
+.card {
+    width: 70%;
+    /* Ancho de las tarjetas */
     height: auto;
+    margin: 0 auto;
+    /* Centra las tarjetas horizontalmente */
+    background-color: #a8a8a8;
+    border-color: black;
 }
 
-.modal-nav-body {
-    margin-top: 100px;
+.card-title {
+    font-size: 2rem;
+    /* Tamaño de fuente del título */
+    font-family: 'Poppins';
+    color: #a8a8a8;
 }
 
-.modal-nav-body ul {
-    list-style-type: none;
+.card-text {
+    font-size: 1rem;
+    /* Tamaño de fuente del texto */
+    font-family: 'Montserrat';
     color: white;
-    margin: 0;
-    padding: 0;
-    width: 100%;
 }
-
-.modal-nav-body ul li {
-    text-align: center;
-    font-size: 70%;
-    padding: 8px;
-    text-transform: uppercase;
-}
-
-.overlay {
-
-    height: 50%;
-    width: 30%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0%;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
-    overflow-x: hidden;
-    transition: 0.5s;
-
-}
-
-/* Position the content inside the overlay */
-.overlay-content {
-    position: relative;
-    top: 25%;
-    /* 25% from the top */
-    width: 30%;
-    /* 100% width */
-    text-align: center;
-    /* Centered text/links */
-    margin-top: 30px;
-    /* 30px top margin to avoid conflict with the close button on smaller screens */
-}
-
-/* The navigation links inside the overlay */
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 24px;
-    color: #818181;
-    display: block;
-    /* Display block instead of inline */
-    transition: 0.3s;
-    /* Transition effects on hover (color) */
-}
-
-/* When you mouse over the navigation links, change their color */
-.overlay a:hover,
-.overlay a:focus {
-    color: #f1f1f1;
-}
-
-/* Position the close button (top right corner) */
-.overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 35px;
-    font-size: 40px;
-}
-
-/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
-@media screen and (max-height: 450px) {
-    .overlay a {
-        font-size: 20px
-    }
-
-    .overlay .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-    }
-}
-
 
 
 
@@ -185,4 +110,43 @@ footer {
     font-size: medium;
     font-weight: bold;
 
+}
+
+
+.config-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    /* pone menú debajo de la imagen de perfil */
+    right: 0;
+    /* menú a la dercha de la imagen de la bruja */
+    background-color: #5d5d5d;
+    box-shadow: 0 0 10px #000000;
+    /*sombra al menú creo*/
+    z-index: 1;
+    /* menu encima */
+}
+
+.config-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.config-menu ul li {
+    padding: 10px;
+    text-align: left;
+}
+
+.config-menu ul li a {
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    font-size: medium;
+}
+
+/* Estilos para cambiar la apariencia cuando se pasa el ratón sobre las opciones del menú */
+.config-menu ul li a:hover {
+    background-color: #e425282a;
+    /* color de fondo al pasar el ratón */
 }
