--- a/assets/styles/styles2col.css
+++ b/assets/styles/styles2col.css
@@ -85,7 +85,21 @@ body {
     margin-inline: 20px;
 }
 
+.containerLogros {
+    width: 180px;
+    margin-top: -16px;
+    margin-inline: 8px;
+    justify-content: center;
+}
 
+.logro {
+    margin: 0;
+    margin-inline: 6px;
+    padding-left: 4px;
+    padding-right: 4px;
+    width: 40px;
+    border-radius: 50%;
+}
 
 #verMasJuegos {
     width: 100px;
