--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -35,14 +35,77 @@ body {
 }
 
 
+.TextosLanding {
+    text-align: center;
+    display: inline-block center;
+    margin-top: 25px;
+}
+
+.TextosLanding span.link {
+    color: black;
+    font-weight: 600;
+    -webkit-text-stroke-width: 0.1vw;
+    -webkit-text-stroke-color: white;
+    font-size: 10vw;
+    overflow: hidden;
+}
+
+.TextosLanding p {
+    font-size: 5vw;
+    color: #a8a8a8;
+}
+
+
+
+.TextosLanding span.p1 {
+    align-items: flex-start;
+}
+
+.TextosLanding span.p2 {
+    vertical-align: middle;
+}
+
+.TextosLanding span.p3 {
+    vertical-align: bottom;
+}
+
+.TextosLanding span.game {
+    font-weight: 600;
+    color: red;
+    font-size: 10vw;
+    -webkit-text-stroke-width: 0.5vw;
+    -webkit-text-stroke-color: black;
+}
+
+.TextosLanding h2 {
+    font-size: 8vw;
+    color: black;
+    -webkit-text-stroke-width: 0.04vw;
+    -webkit-text-stroke-color: white;
+
+}
+
+.TextosLanding .textosFBlanco p {
+    font-weight: 600;
+    font-size: 4vw;
+    color: black;
+    -webkit-text-stroke-width: 0.04vw;
+    -webkit-text-stroke-color: white;
+
+}
+
+
 .card {
-    width: 70%;
+    max-width: 800px;
     /* Ancho de las tarjetas */
     height: auto;
     margin: 0 auto;
+    margin-top: 50px;
     /* Centra las tarjetas horizontalmente */
-    background-color: #a8a8a8;
+    background-color: #a8a8a8e0;
     border-color: black;
+    border-radius: 5%;
+
 }
 
 .card-title {
@@ -59,6 +122,17 @@ body {
     color: white;
 }
 
+.content-card {
+    font-size: 2rem;
+
+}
+
+.content-card img {
+    width: 100%;
+    max-height: 400px;
+    border-radius: 10%;
+    margin-right: 20px;
+}
 
 
 
@@ -67,6 +141,7 @@ footer {
     background-color: #a8a8a8;
     color: white;
     padding: 10px;
+    margin-top: 20px;
 }
 
 /* Contenedor principal del footer */
@@ -97,6 +172,16 @@ footer {
     margin-top: 20px;
 }
 
+.card .social-icon {
+    text-align: center;
+
+}
+
+.card .social-icon img {
+    text-align: center;
+    margin-top: 20px;
+    margin-inline: 55px;
+}
 
 /* Estilo para las imágenes de íconos de redes sociales */
 .social-icon img {
