--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -52,6 +52,9 @@ h1 {
     background-color: #000;
     border-color: #e42527;
     max-width: 700px;
+    max-height: 500px;
+    overflow-x: hidden;
+
 
 }
 
