--- a/assets/styles/stylesProfile.css
+++ b/assets/styles/stylesProfile.css
@@ -1,7 +1,8 @@
 body {
     background-color: #000000;
-    color: aliceblue;
     overflow-x: hidden;
+    font-family: 'inter';
+    font-weight: bold;
 }
 
 /* Barra de navegación */
