--- a/assets/styles/formulario.css
+++ b/assets/styles/formulario.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins:wght@400;600;700&display=swap');
+
 body {
     margin: 0;
     padding: 0;
     background-image: url('../images/axville-WcrqKjgMPfI-unsplash.jpg');
     background-size: cover;
-    background-position: center;
     display: flex;
+    align-items: center;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     font-family: 'Bree Serif', serif;
     font-family: 'Poppins', sans-serif;
 }
+
 .background {
     background-color: black;
     opacity: 0.8;
@@ -21,33 +22,132 @@ body {
     text-align: center;
     color: white;
 }
+
 .tarjeta {
     background-color: transparent;
     text-align: center;
     padding: 10px 50px;
 }
+
 .sinContraseña {
     color: white;
     text-decoration: none;
     display: block;
 }
+
 .sinContraseña:hover {
     text-decoration: underline;
 }
-.registro{
+
+.registro {
     margin-top: 20px;
     display: inline-block;
 }
-.sinCuenta{
+
+.sinCuenta {
     color: white;
 }
+
 .linkRegistro {
     color: #e42527;
     text-decoration: none;
 }
+
 .linkRegistro:hover {
     text-decoration: underline;
 }
+
 .form-floating label {
     color: black;
+}
+
+
+.config-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    /* pone menú debajo de la imagen de perfil */
+    right: 0;
+    /* menú a la dercha de la imagen de la bruja */
+    background-color: #5d5d5d;
+    box-shadow: 0 0 10px #000000;
+    /*sombra al menú creo*/
+    z-index: 1;
+    /* menu encima */
+}
+
+.config-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.config-menu ul li {
+    padding: 10px;
+    text-align: left;
+}
+
+.config-menu ul li a {
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    font-size: medium;
+}
+
+/* Estilos para cambiar la apariencia cuando se pasa el ratón sobre las opciones del menú */
+.config-menu ul li a:hover {
+    background-color: #e425282a;
+    /* color de fondo al pasar el ratón */
+}
+
+
+/* Estilo para el footer */
+footer {
+    background-color: #a8a8a8;
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+/* Contenedor principal del footer */
+.footer-container {
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+/* Estilo para el logo en el footer */
+.footerlogo {
+    width: 100px;
+    margin: 0 auto;
+    /* Centrar horizontalmente */
+}
+
+/* Estilo para las divisiones entre el logo y los íconos */
+.divider {
+    margin-top: 10px;
+    width: 100%;
+    height: 5px;
+    background-color: rgb(0, 0, 0);
+}
+
+/* Estilo para los íconos de redes sociales */
+.social-icons {
+    margin-top: 20px;
+}
+
+/* Estilo para las imágenes de íconos de redes sociales */
+.social-icon img {
+    width: 30px;
+    height: 30px;
+}
+
+
+.links a {
+    text-decoration: none;
+    color: black;
+    font-size: medium;
+    font-weight: bold;
+
 }
