--- a/assets/styles/registrarUsusario.css
+++ b/assets/styles/registrarUsusario.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins:wght@400;600;700&display=swap');
 
-body{
+body {
     background-image: url("../images/img_registrarUX/BackImg_Dskp_Or.jpg");
     background-size: cover;
     background-position: center;
@@ -11,33 +11,50 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
-.navbar {
-    background-color: #a8a8a8;
-    opacity: 0.3;
-    margin-bottom: 20px;
+.containerprofile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
 }
+
+.navbar {
+    font-style: bold;
+    font-family: 'Poppins';
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: #a8a8a87c;
+    /* Cambia el color de fondo */
+    padding: 2px;
+
+}
+
 #form-register-user {
-    width: 600px;
-    height: 620px;
+
+    max-width: 600px;
+    min-height: 620px;
     background-color: black;
     border-radius: 30px;
     opacity: 0.8;
     padding: 10px 50px;
-    margin: 0 auto; 
+    margin: 20px auto;
 }
+
 #title-register {
     font-weight: 600;
     font-size: 30px;
     text-align: center;
     color: #e42527;
 }
+
 .btn-outline-danger {
     --bs-btn-color: #e42527;
     --bs-btn-border-color: #e42527;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #e42527;
     --bs-btn-hover-border-color: #e42527;
-    --bs-btn-focus-shadow-rgb: 220,53,69;
+    --bs-btn-focus-shadow-rgb: 220, 53, 69;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #e42527;
     --bs-btn-active-border-color: #e42527;
@@ -47,14 +64,111 @@ body{
     --bs-btn-disabled-border-color: #e42527;
     --bs-gradient: none;
 }
+
 #btn-register {
     margin-top: 20px;
 }
+
 .form-check-input:checked {
     background-color: #e42527;
     border-color: #e42527;
 }
+
 .form-floating label {
     color: black;
 }
 
+
+.config-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    /* pone menú debajo de la imagen de perfil */
+    right: 0;
+    /* menú a la dercha de la imagen de la bruja */
+    background-color: #5d5d5d;
+    box-shadow: 0 0 10px #000000;
+    /*sombra al menú creo*/
+    z-index: 1;
+    /* menu encima */
+}
+
+.config-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.config-menu ul li {
+    padding: 10px;
+    text-align: left;
+}
+
+.config-menu ul li a {
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    font-size: medium;
+}
+
+/* Estilos para cambiar la apariencia cuando se pasa el ratón sobre las opciones del menú */
+.config-menu ul li a:hover {
+    background-color: #e425282a;
+    /* color de fondo al pasar el ratón */
+}
+
+
+/* Estilo para el footer */
+footer {
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    background-color: #a8a8a8;
+    color: white;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+/* Contenedor principal del footer */
+.footer-container {
+    width: 100%;
+    display: grid;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+/* Estilo para el logo en el footer */
+.footerlogo {
+    width: 100px;
+    margin: 0 auto;
+    /* Centrar horizontalmente */
+}
+
+/* Estilo para las divisiones entre el logo y los íconos */
+.divider {
+    margin-top: 10px;
+    width: 100%;
+    height: 5px;
+    background-color: rgb(0, 0, 0);
+}
+
+/* Estilo para los íconos de redes sociales */
+.social-icons {
+    margin-top: 20px;
+}
+
+/* Estilo para las imágenes de íconos de redes sociales */
+.social-icon img {
+    width: 30px;
+    height: 30px;
+}
+
+
+.links a {
+    text-decoration: none;
+    color: black;
+    font-size: medium;
+    font-weight: bold;
+
+}
