--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -4,33 +4,29 @@ html {
 }
 
 
-.containerprofile img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 20px;
-}
-
-#logo {
-    margin-left: 20px;
-    width: 150px;
-}
-
-
-nav {
-    font-style: bold;
-    font-family: 'Poppins';
-
-}
-
+/* Barra de navegación */
 .custom-navbar {
+    background-color: #8a8a8a80;
     position: sticky;
     top: 0;
-    z-index: 100;
-    background-color: #a8a8a87c;
-    /* Cambia el color de fondo */
-    padding: 2px;
 }
+.logo {
+    margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 150px;
+    text-align: left;
+}
+.containerProfile {
+    margin-right: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.perfil {
+    width: 45px;
+    border-radius: 50%
+}
+
 
 
 body {
