--- a/assets/styles/contactanos.css
+++ b/assets/styles/contactanos.css
@@ -10,28 +10,31 @@ body {
     overflow-x: hidden;
 }
 
-nav {
-    margin-bottom: 20px;
-}
+/* Barra de navegación */
 .custom-navbar {
+    background-color: #8a8a8a80;
     position: sticky;
     top: 0;
-    z-index: 100;
-    background-color: #8a8a8a80;
-    /* Cambia el color de fondo */
-    padding: 2px;
 }
-#logo {
+.logo {
     margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     width: 150px;
+    text-align: left;
 }
-.containerprofile img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+.containerProfile {
     margin-right: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.perfil{
+    width: 45px;
+    border-radius: 50%
 }
 
+
+/* Estilo para el formulario de contacto */
 #form-register-user {
     max-width: 600px;
     height: auto;
@@ -39,7 +42,7 @@ nav {
     border-radius: 30px;
     opacity: 0.8;
     padding: 10px 50px;
-    margin: 0 auto; 
+    margin: 20px auto; 
 }
 #title-contact {
     font-weight: 600;
@@ -69,42 +72,30 @@ footer {
     position: absolute;
     width: 100%;
 }
-
-/* Contenedor principal del footer */
-.footer-container {
+.footer-container { /* Contenedor principal del footer */
     display: grid;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-
-/* Estilo para el logo en el footer */
-.footerlogo {
+.footerlogo {   /* Estilo para el logo en el footer */
     width: 100px;
     margin: 0 auto;
-    /* Centrar horizontalmente */
 }
-
-/* Estilo para las divisiones entre el logo y los íconos */
-.divider {
+.divider {  /* Estilo para las divisiones entre el logo y los íconos */
     margin-top: 10px;
     width: 100%;
     height: 5px;
     background-color: rgb(0, 0, 0);
 }
-
-/* Estilo para los íconos de redes sociales */
-.social-icons {
+.social-icons { /* Estilo para los íconos de redes sociales */
     margin-top: 20px;
 }
-
-/* Estilo para las imágenes de íconos de redes sociales */
-.social-icon img {
+.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
     width: 30px;
     height: 30px;
 }
-
-.links a {
+.links a {  /* Estilo para los links del footer */
     text-decoration: none;
     color: black;
     font-size: medium;
