--- a/assets/styles/formulario.css
+++ b/assets/styles/formulario.css
@@ -1,27 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Poppins:wght@400;600;700&display=swap');
 
 body {
-    margin: 0;
-    padding: 0;
-    background-image: url('../images/axville-WcrqKjgMPfI-unsplash.jpg');
+    background-image: url("../images/img_registrarUX/BackImg_Dskp_Or.jpg");
     background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-items: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    color: white;
     font-family: 'Bree Serif', serif;
     font-family: 'Poppins', sans-serif;
 }
 
 .background {
+    max-width: 600px;
+    min-height: 620px;
     background-color: black;
-    opacity: 0.8;
-    width: 500px;
-    height: 520px;
     border-radius: 30px;
-    text-align: center;
-    color: white;
+    opacity: 0.8;
+    padding: 10px 50px;
+    margin: 20px auto;
 }
+
+
+.containerprofile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.navbar {
+    font-style: bold;
+    font-family: 'Poppins';
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background-color: #a8a8a87c;
+    /* Cambia el color de fondo */
+    padding: 2px;
+
+}
+
+
 
 .tarjeta {
     background-color: transparent;
