--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -9,7 +9,9 @@ html {
     background-color: #8a8a8a80;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
+
 .logo {
     margin-left: 20px;
     margin-top: 5px;
@@ -17,11 +19,13 @@ html {
     width: 150px;
     text-align: left;
 }
+
 .containerProfile {
     margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
 .perfil {
     width: 45px;
     border-radius: 50%
@@ -42,30 +46,6 @@ h1 {
 #cardCarousel {
     padding: 20px;
     /* Añade espaciado interior para separar el carrusel de otros elementos */
-}
-
-.card {
-    background-color: #000;
-    border-color: #e42527;
-    max-width: 700px;
-    max-height: 500px;
-    overflow-x: hidden;
-
-
-}
-
-.card-title {
-    font-size: 2rem;
-    /* Tamaño de fuente del título */
-    font-family: 'Poppins';
-    color: #a8a8a8;
-}
-
-.card-text {
-    font-size: 1rem;
-    /* Tamaño de fuente del texto */
-    font-family: 'Montserrat';
-    color: white;
 }
 
 #vision {
@@ -189,4 +169,159 @@ footer {
     font-size: medium;
     font-weight: bold;
 
+}
+
+
+
+
+.container .card {
+    z-index: 0;
+    /*Add this*/
+    position: relative;
+    background-color: transparent;
+    margin: 20px;
+}
+
+.container .card .face {
+    width: 300px;
+    height: 200px;
+    transition: .4s;
+
+}
+
+.container .card .face.face1 {
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.container .card:hover .face.face1 {
+    transform: translateY(0);
+    box-shadow:
+        inset 0 0 60px whitesmoke,
+        inset 20px 0 80px #f0f,
+        inset -20px 0 80px #0ff,
+        inset 20px 0 300px #f0f,
+        inset -20px 0 300px #0ff,
+        0 0 50px #fff,
+        -10px 0 80px #f0f,
+        10px 0 80px #0ff;
+
+}
+
+
+.container .card .face.face1 .content {
+    opacity: .8;
+    transition: 0.5s;
+    text-align: center;
+
+}
+
+.container .card:hover .face.face1 .content {
+    opacity: 1;
+
+}
+
+.container .card .face.face1 .content i {
+    font-size: 3em;
+    color: white;
+    display: inline-block;
+
+}
+
+.container .card .face.face1 .content h3 {
+    font-size: 1em;
+    color: white;
+    text-align: center;
+
+
+}
+
+.container .card .face.face1 .content a {
+    transition: .5s;
+}
+
+.container .card .face.face2 {
+    position: relative;
+    background: whitesmoke;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, .8);
+    transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2 {
+    transform: translateY(0);
+
+
+}
+
+.container .card .face.face2 .content p,
+a {
+    font-size: 10pt;
+    margin: 0;
+    padding: 0;
+    color: #333;
+}
+
+.container .card .face.face2 .content a {
+    text-decoration: none;
+    color: black;
+    box-sizing: border-box;
+    outline: 1px dashed #333;
+    padding: 10px;
+    margin: 15px 0 0;
+    display: inline-block;
+}
+
+.container .card .face.face2 .content a:hover {
+    background: #333;
+    color: whitesmoke;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 767px) {
+
+    .carousel-inner .carousel-item>div {
+        display: none;
+    }
+
+    .carousel-inner .carousel-item>div:first-child {
+        display: block;
+    }
+}
+
+
+/* medium and up screens */
+@media (min-width: 768px) {
+
+    .carousel-inner .carousel-item-end.active,
+    .carousel-inner .carousel-item-next {
+        transform: translateX(25%);
+    }
+
+    .carousel-inner .carousel-item-start.active,
+    .carousel-inner .carousel-item-prev {
+        transform: translateX(-25%);
+    }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+    transform: translateX(0);
+}
+
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+    display: flex;
 }
