--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -11,7 +11,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-color: #464646;
-
+    overflow-x: hidden;
 }
 
 /* Barra de navegación */
