--- a/assets/styles/formulario.css
+++ b/assets/styles/formulario.css
@@ -9,6 +9,7 @@ body {
     color: white;
     font-family: 'Bree Serif', serif;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 .background {
