--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -208,14 +208,14 @@ footer {
 .container .card:hover .face.face1 {
     transform: translateY(0);
     box-shadow:
-        inset 0 0 60px whitesmoke,
-        inset 20px 0 80px #f0f,
-        inset -20px 0 80px #0ff,
-        inset 20px 0 300px #f0f,
-        inset -20px 0 300px #0ff,
-        0 0 50px #fff,
-        -10px 0 80px #f0f,
-        10px 0 80px #0ff;
+        inset 0 0 60px #00000065,
+        inset 20px 0 80px #0000004e,
+        inset -20px 0 80px #e42527,
+        inset 20px 0 300px rgb(0, 0, 0),
+        inset -20px 0 300px #e42527,
+        0 0 50px #ffffff2f,
+        -10px 0 80px rgb(255, 0, 0),
+        10px 0 80px #a8a8a8;
 
 }
 
@@ -234,7 +234,7 @@ footer {
 
 .container .card .face.face1 .content i {
     font-size: 3em;
-    color: white;
+    color: rgb(9, 9, 9);
     display: inline-block;
 
 }
@@ -253,7 +253,7 @@ footer {
 
 .container .card .face.face2 {
     position: relative;
-    background: whitesmoke;
+    background: rgb(0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -261,6 +261,7 @@ footer {
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, .8);
     transform: translateY(-100px);
+    color: white;
 }
 
 .container .card:hover .face.face2 {
@@ -274,7 +275,7 @@ a {
     font-size: 10pt;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #a8a8a8;
 }
 
 .container .card .face.face2 .content a {
