--- a/assets/styles/terminos.css
+++ b/assets/styles/terminos.css
@@ -9,6 +9,7 @@ html {
     background-color: #8a8a8a80;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 .logo { /* Estilo para el logo en la barra de navegación */
     margin-left: 20px;
@@ -47,12 +48,12 @@ html {
 }
 .config-menu ul li a {  /* Estilo para los links del menú de configuración */
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     display: block;
-    font-size: medium;
+    font-size:large;
 }
 .config-menu ul li a:hover {    /* color de fondo al pasar el ratón */
-    background-color: #e425282a;
+    background-color: #e4252770;
 }
 
 
@@ -100,50 +101,38 @@ h5{
 
 /* Estilo para el footer */
 footer {
-    background-color: #a8a8a8;
-    color: white;
+    background-color: #8a8a8a80;
     padding: 10px;
+    margin-top: 20px;
+    bottom: 0;
+    width: 100%;
 }
-
-/* Contenedor principal del footer */
-.footer-container {
+.footer-container { /* Contenedor principal del footer */
     display: grid;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-
-/* Estilo para el logo en el footer */
-.footerlogo {
+.footerlogo {   /* Estilo para el logo en el footer */
     width: 100px;
     margin: 0 auto;
-    /* Centrar horizontalmente */
 }
-
-/* Estilo para las divisiones entre el logo y los íconos */
-.divider {
+.divider {  /* Estilo para las divisiones entre el logo y los íconos */
     margin-top: 10px;
     width: 100%;
     height: 5px;
     background-color: rgb(0, 0, 0);
 }
-
-/* Estilo para los íconos de redes sociales */
-.social-icons {
+.social-icons { /* Estilo para los íconos de redes sociales */
     margin-top: 20px;
 }
-
-
-/* Estilo para las imágenes de íconos de redes sociales */
-.social-icon img {
+.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
     width: 30px;
     height: 30px;
 }
-
-.links a {
+.links a {  /* Estilo para los links del footer */
     text-decoration: none;
     color: black;
     font-size: medium;
     font-weight: bold;
-
 }
