--- a/assets/styles/Landing.css
+++ b/assets/styles/Landing.css
@@ -5,13 +5,15 @@ html {
 
 body {
     /*background: url(background-photo.jpg) center center cover no-repeat fixed;*/
-    background-image: url("../images/Fondo2.png");
+    background: linear-gradient(rgba(70, 70, 70, 0.803), rgba(73, 73, 73, 0.7)),
+        url("../images/Fondo2.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-color: #464646;
     overflow-x: hidden;
+
 }
 
 /* Barra de navegación */
@@ -95,19 +97,26 @@ body {
     -webkit-text-stroke-color: black;
 }
 
+.TextosLanding span.gameRed {
+    color: red;
+    font-size: 8vw;
+    -webkit-text-stroke-width: 0.4vw;
+    -webkit-text-stroke-color: black;
+}
+
 .TextosLanding h2 {
     font-size: 8vw;
     color: black;
-    -webkit-text-stroke-width: 0.04vw;
+    -webkit-text-stroke-width: 0.05vw;
     -webkit-text-stroke-color: white;
 
 }
 
 .TextosLanding .textosFBlanco p {
-    font-weight: 600;
+    font-weight: 700;
     font-size: 4vw;
     color: black;
-    -webkit-text-stroke-width: 0.04vw;
+    -webkit-text-stroke-width: 0.08vw;
     -webkit-text-stroke-color: white;
 
 }
