Se actualizan navbars y footers/registo,login,contactanos,aboutus

--- a/assets/styles/terminos.css
+++ b/assets/styles/terminos.css
@@ -57,7 +57,7 @@ html {
 .config-menu ul li a:hover {    /* color de fondo al pasar el ratón */
     background-color: #e425282a;
 }
-
+/*termiman estilos de navbar*/
 
 
 body {
