--- a/assets/styles/formulario.css
+++ b/assets/styles/formulario.css
@@ -23,27 +23,64 @@ body {
 }
 
 
-.containerprofile img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 20px;
-}
-
-.navbar {
-    font-style: bold;
-    font-family: 'Poppins';
+/* Barra de navegación */
+.custom-navbar {
+    background-color: #8a8a8a80;
     position: sticky;
     top: 0;
-    z-index: 100;
-    background-color: #a8a8a87c;
-    /* Cambia el color de fondo */
-    padding: 2px;
-
+    z-index: 1;
 }
+.logo { /* Estilo para el logo en la barra de navegación */
+    margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 150px;
+    text-align: left;
+}
+.containerProfile { /* Estilo para el contenedor del perfil en la barra de navegación */
+    margin-right: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.perfil {   /* Estilo para la imagen de perfil en la barra de navegación */
+    width: 45px;
+    border-radius: 50%
+}
+/* Estilo para el menú de configuración */
+.config-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #5d5d5d;
+    box-shadow: 0 0 10px #000000;
+    z-index: 1;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+.config-menu ul {   /* Estilo para la lista del menú de configuración */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.config-menu ul li {    /* Estilo para los items del menú de configuración */
+    padding: 10px;
+    text-align: left;
+}
+.config-menu ul li a {  /* Estilo para los links del menú de configuración */
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
+    font-size:large;
+}
+.config-menu ul li a:hover {    /* color de fondo al pasar el ratón */
+    background-color: #e425282a;
+}
+/*termiman estilos de navbar*/
 
 
 
+/*Estilos para formulario*/
 .tarjeta {
     background-color: transparent;
     text-align: center;
@@ -83,92 +120,43 @@ body {
 }
 
 
-.config-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    /* pone menú debajo de la imagen de perfil */
-    right: 0;
-    /* menú a la dercha de la imagen de la bruja */
-    background-color: #5d5d5d;
-    box-shadow: 0 0 10px #000000;
-    /*sombra al menú creo*/
-    z-index: 1;
-    /* menu encima */
-}
 
-.config-menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.config-menu ul li {
-    padding: 10px;
-    text-align: left;
-}
-
-.config-menu ul li a {
-    text-decoration: none;
-    color: #000000;
-    display: block;
-    font-size: medium;
-}
-
-/* Estilos para cambiar la apariencia cuando se pasa el ratón sobre las opciones del menú */
-.config-menu ul li a:hover {
-    background-color: #e425282a;
-    /* color de fondo al pasar el ratón */
-}
 
 
 /* Estilo para el footer */
 footer {
-    background-color: #a8a8a8;
-    color: white;
+    background-color: #8a8a8a80;
     padding: 10px;
     margin-top: 20px;
+    bottom: 0;
+    width: 100%;
 }
-
-/* Contenedor principal del footer */
-.footer-container {
+.footer-container { /* Contenedor principal del footer */
     display: grid;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-
-/* Estilo para el logo en el footer */
-.footerlogo {
+.footerlogo {   /* Estilo para el logo en el footer */
     width: 100px;
     margin: 0 auto;
-    /* Centrar horizontalmente */
 }
-
-/* Estilo para las divisiones entre el logo y los íconos */
-.divider {
+.divider {  /* Estilo para las divisiones entre el logo y los íconos */
     margin-top: 10px;
     width: 100%;
     height: 5px;
     background-color: rgb(0, 0, 0);
 }
-
-/* Estilo para los íconos de redes sociales */
-.social-icons {
+.social-icons { /* Estilo para los íconos de redes sociales */
     margin-top: 20px;
 }
-
-/* Estilo para las imágenes de íconos de redes sociales */
-.social-icon img {
+.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
     width: 30px;
     height: 30px;
 }
-
-
-.links a {
+.links a {  /* Estilo para los links del footer */
     text-decoration: none;
     color: black;
     font-size: medium;
     font-weight: bold;
-
 }
