feat: :art: Format scroll menu

--- a/assets/styles/contactanos.css
+++ b/assets/styles/contactanos.css
@@ -60,12 +60,13 @@ h1 {
     list-style: none;
     padding: 0;
     margin: 0;
-    width: 290px;
+    width: 270px;
 }
 .config-menu ul li {    /* Estilo para los items del menú de configuración */
     padding: 10px;
     text-align: left;
     align-items: center;
+    width: auto;
 }
 .config-menu ul li:hover {    /* color de fondo al pasar el ratón */
     background-color: #e4252846;
@@ -74,13 +75,18 @@ h1 {
 }
 .config-menu ul li a {  /* Estilo para los links del menú de configuración */
     text-decoration: none;
-    font-size: large;
     color: #ffffff;
+    font-size: large;
 }
-.config-menu ul li a:hover {    /* color de fondo al pasar el ratón */
-    background-color: #e425282a;
+.config-menu ul li img{    /* Estilo para los iconos del menú de configuración */
+    height: 20px;
+    margin-bottom: 5px;
 }
-/*termiman estilos de navbar*/
+.config-menu ul hr {    /* color de fondo al pasar el ratón */
+    margin: 5px 0;
+    border: solid 2px #000000;
+    margin-inline: 10px 30px;
+}
 
 
 /* Estilo para el formulario de contacto */
@@ -91,32 +97,24 @@ h1 {
     border-radius: 30px;
     opacity: 0.8;
     padding: 10px 50px;
-    margin: 20px auto;
+    margin: 20px auto; 
 }
-
-#title-contact {
-    /* Estilo para el título del formulario */
+#title-contact {    /* Estilo para el título del formulario */
     font-weight: 600;
     font-size: 30px;
     text-align: center;
     color: #e42527;
     margin: 20px 0;
 }
-
-#input-comment {
-    /* Estilo para el input de comentario */
+#input-comment {    /* Estilo para el input de comentario */
     height: auto;
     min-height: 50px;
     padding: 30px 12px 16px 12px;
 }
-
-#btn-register {
-    /* Estilo para el botón de enviar */
+#btn-register { /* Estilo para el botón de enviar */
     margin: 20px 0;
 }
-
-.form-floating label {
-    /* Estilo para el label de los inputs */
+.form-floating label {  /* Estilo para el label de los inputs */
     color: black;
 }
 
@@ -127,42 +125,30 @@ footer {
     color: white;
     padding: 10px;
 }
-
-.footer-container {
-    /* Contenedor principal del footer */
+.footer-container { /* Contenedor principal del footer */
     display: grid;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-
-.footerlogo {
-    /* Estilo para el logo en el footer */
+.footerlogo {   /* Estilo para el logo en el footer */
     width: 100px;
     margin: 0 auto;
 }
-
-.divider {
-    /* Estilo para las divisiones entre el logo y los íconos */
+.divider {  /* Estilo para las divisiones entre el logo y los íconos */
     margin-top: 10px;
     width: 100%;
     height: 5px;
     background-color: rgb(0, 0, 0);
 }
-
-.social-icons {
-    /* Estilo para los íconos de redes sociales */
+.social-icons { /* Estilo para los íconos de redes sociales */
     margin-top: 20px;
 }
-
-.social-icon img {
-    /* Estilo para las imágenes de íconos de redes sociales */
+.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
     width: 30px;
     height: 30px;
 }
-
-.links a {
-    /* Estilo para los links del footer */
+.links a {  /* Estilo para los links del footer */
     text-decoration: none;
     color: black;
     font-size: medium;
