--- a/assets/styles/page404.css
+++ b/assets/styles/page404.css
@@ -74,7 +74,7 @@ html {
 
 /*ESTILOS DE BODY*/
 body { 
-    background-color: black;
+    background-color: #000000ef;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
